plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.sonarqube' version '4.4.1.3373'
	id 'jacoco'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'UserService'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	testcontainersVersion = "1.19.7"
}

dependencies {
	// Основные зависимости
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'org.liquibase:liquibase-core'
	runtimeOnly 'org.postgresql:postgresql'

	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'org.apache.commons:commons-pool2'
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Тестирование
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'

	// TestContainers - используем BOM для согласованных версий
	testImplementation platform("org.testcontainers:testcontainers-bom:${testcontainersVersion}")
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.testcontainers:testcontainers'

	// Mockito
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
	}
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
		exceptionFormat "full"
	}
	systemProperty "spring.profiles.active", "test"
	maxParallelForks = 1
	forkEvery = 1
	finalizedBy jacocoTestReport
}

jacoco {
	toolVersion = "0.8.11"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}

	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
					'**/dto/**',
					'**/entity/**',
					'**/config/**',
					'**/exception/**',
					'**/UserServiceApplication.class'
			])
		}))
	}
}

jacocoTestCoverageVerification {
	dependsOn jacocoTestReport
	violationRules {
		rule {
			limit {
				minimum = 0.6
			}
		}
	}
}

sonarqube {
	properties {
		property "sonar.projectKey", "UserService"
		property "sonar.projectName", "User Service"
		property "sonar.host.url", System.getenv('SONAR_HOST_URL') ?: 'http://localhost:9000'
		property "sonar.token", System.getenv('SONAR_TOKEN') ?: ''
		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
		property "sonar.java.coveragePlugin", "jacoco"
		property "sonar.junit.reportPaths", "build/test-results/test"
		property "sonar.coverage.exclusions", "**/dto/**,**/entity/**,**/config/**,**/exception/**,**/UserServiceApplication.java"
		property "sonar.cpd.exclusions", "**/dto/**,**/entity/**"
		property "sonar.sourceEncoding", "UTF-8"
		property "sonar.java.binaries", "build/classes"
		property "sonar.java.test.binaries", "build/classes"
		property "sonar.tests", "src/test"
	}
}

check.dependsOn jacocoTestCoverageVerification

compileJava {
	options.compilerArgs = [
			'-Amapstruct.defaultComponentModel=spring',
			'-parameters'
	]
}

tasks.register('buildWithoutTests') {
	dependsOn tasks.named('build')
	doFirst {
		tasks.named('test').get().enabled = false
	}
}

tasks.register('sonarAnalysis') {
	dependsOn 'build'
	doLast {
		println "SonarQube analysis completed"
	}
}